Fix CHECK failure if datatype stopped while starting

The problematic codepath is when a controller subclass calls
ReportModelError() to disable the datatype, usually because of a
datatype policy reason (e.g. custom passphrase was enabled and the
datatype should be disabled). At this point, the datatype must be
precisely loading (MODEL_STARTING) for the crash to repro, which is
very unlikely but gets surfaced by integration tests.

Bug: 916943,916883,916886,916884,916881
Change-Id: I5cdfed50bd28aafc1bd7e5bbbe8d851e0e0100e1
Reviewed-on: https://chromium-review.googlesource.com/c/1386424
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Reviewed-by: Florian Uunk <feuunk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618193}
Former-commit-id: 94c345a1ee2dd5e81d777debf57e134ff7ad74bc